fixed mysterious gap

--- a/app/assets/stylesheets/custom/projects.css.scss
+++ b/app/assets/stylesheets/custom/projects.css.scss
@@ -23,7 +23,7 @@
 
     .item img {
       width: 100%;
-      margin-bottom: -5px;
+      display: block;
       opacity: .7;
       transition: $fadeSpeed;
       z-index: 9;
